--- a/src/defaultV2-theme/defaultV2.m600.scss
+++ b/src/defaultV2-theme/defaultV2.m600.scss
@@ -47,8 +47,6 @@
     }
 
     .sd-multipletext__item-title {
-      font-size: calcFontSize(0.75);
-      line-height: calcLineHeight(1);
       height: calcSize(2);
       padding-right: 0;
       border-right: none;
@@ -56,6 +54,11 @@
       margin-top: calcSize(1);
       width: 100%;
       max-width: none;
+
+      span {
+        font-size: calcFontSize(0.75);
+        line-height: calcLineHeight(1);
+      }
     }
 
     .sd-multipletext__item {
