--- a/src/knockout/templates/index.html
+++ b/src/knockout/templates/index.html
@@ -4,7 +4,7 @@
 </script>
 
 <script type="text/html" id="survey-content-template">
-  <div data-bind="css: rootCss, elementStyle: themeVariables">
+  <div data-bind="css: rootCss, elementStyle: themeVariables, event: { scroll: $data.onScroll }">
       <!-- ko if: !!renderBackgroundImage -->
       <div data-bind="css: css.rootBackgroundImage, style: backgroundImageStyle"></div>
       <!-- /ko -->
