--- a/src/defaultV2-theme/blocks/sd-html.scss
+++ b/src/defaultV2-theme/blocks/sd-html.scss
@@ -15,15 +15,13 @@
     @include articleLargeFont;
   }
 
-  h4 {
+  h4,
+  h5,
+  h6 {
     @include articleMediumFont;
   }
 
-  h5,
-  h6 {
-    color: $foreground;
-  }
-
+  td,
   span,
   div,
   p {
