#6849 Incorrect smartphone paddings Fixes #6849

--- a/src/defaultV2-theme/blocks/sd-body.scss
+++ b/src/defaultV2-theme/blocks/sd-body.scss
@@ -2,7 +2,7 @@
   width: 100%;
 
   .sd-body__page {
-    min-width: calc(300px + 6 * #{$base-unit});
+    min-width: 300px;
   }
 
   .sd-body__timer {
