--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -128,17 +128,19 @@ body {
   }
 }
 
-.sd-root-modern--full-container form.sd-root_form--absolute {
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
 .sd-root-modern--mobile {
   --sd-timer-size: calc(9 * #{$base-unit});
+}
+
+.sd-root-modern__wrapper {
+  position: relative;
+}
+
+.sd-root-modern--full-container .sd-root-modern__wrapper--absolute {
+  position: static;
+  overflow: auto;
+  width: 100%;
+  height: 100%;
 }
 
 .sv-popup {
