--- a/src/knockout/templates/index.html
+++ b/src/knockout/templates/index.html
@@ -7,9 +7,9 @@
   <div data-bind="css: rootCss, elementStyle: themeVariables">
     <div data-bind="css: wrapperFormCss">
       <!-- ko if: !!renderBackgroundImage -->
-      <div data-bind="css: backgroundImageCss, elementStyle: backgroundImageStyle"></div>
+      <div data-bind="css: css.rootBackgroundImage, elementStyle: backgroundImageStyle"></div>
       <!-- /ko -->
-      <form data-bind="css: css.rootForm" onsubmit="return false;">
+      <form onsubmit="return false;">
           <div class="sv_custom_header" data-bind="visible: !hasLogo"></div>
           <div data-bind="css: containerCss">
               <!-- ko template: { name: koTitleTemplate, afterRender: koAfterRenderHeader } -->
