--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -45,6 +45,7 @@
 @import "blocks/sd-progress-toc.scss";
 @import "blocks/sd-list.scss";
 @import "blocks/sd-timer.scss";
+@import "blocks/sd-loading-indicator.scss";
 @import "../components-container.scss";
 @import "../signaturepad.scss";
 @import "./defaultV2.m600.scss";
