Revert "#6867 Incorrect gap in wrapped multi-line"
This reverts commit 4e8c46d8c1dcfd98520f7e005261f33169ac7502.

--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -27,7 +27,7 @@
 }
 
 .sd-row--multiple {
-  row-gap: calcSize(2);
+  row-gap: var(--sd-base-vertical-padding);
   margin-left: calc(-1 * var(--sd-base-padding));
   width: calc(100% + var(--sd-base-padding));
   flex-wrap: wrap;
