--- a/src/knockout/components/components-container/components-container.html
+++ b/src/knockout/components/components-container/components-container.html
@@ -3,7 +3,7 @@
 <div data-bind="css: css">
   <!-- ko foreach: components -->
   <!-- ko if: $data.component && !$data.template -->
-  <!-- ko component: { name: component, params: { survey: $parent.survey, model: $data.data } } -->
+  <!-- ko component: { name: component, params: { survey: $parent.survey, model: $data.data, container: $parent.container } } -->
   <!-- /ko -->
   <!-- /ko -->
   <!-- ko if: $data.template -->
@@ -16,7 +16,7 @@
 <!-- ko ifnot: $data.needRenderWrapper -->
   <!-- ko foreach: components -->
   <!-- ko if: $data.component && !$data.template -->
-  <!-- ko component: { name: component, params: { survey: $parent.survey, model: $data.data } } -->
+  <!-- ko component: { name: component, params: { survey: $parent.survey, model: $data.data, container: $parent.container } } -->
   <!-- /ko -->
   <!-- /ko -->
   <!-- ko if: $data.template -->
