work for the https://github.com/surveyjs/survey-library/issues/6810 (review-1)

--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -67,12 +67,15 @@
 }
 
 .sd-file__choose-btn--text {
-  display: flex;
-  flex-direction: column;
+  display: block;
   margin-top: calcSize(1);
   font-weight: 600;
   color: $primary;
   cursor: pointer;
+}
+
+.sd-file__wrapper {
+  width: max-content;
 }
 
 .sd-question--answered {
