PR: File Question. Button breaks after removing the file (Safari) (#6824)
* work for the https://github.com/surveyjs/survey-library/issues/6810

* work for the https://github.com/surveyjs/survey-library/issues/6810 (review-1)

--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -74,6 +74,10 @@
   cursor: pointer;
 }
 
+.sd-file__wrapper {
+  width: max-content;
+}
+
 .sd-question--answered {
   .sd-file__drag-area-placeholder {
     display: none;
