--- a/packages/survey-angular-ui/src/questions/file.component.html
+++ b/packages/survey-angular-ui/src/questions/file.component.html
@@ -1,122 +1,67 @@
 <div [class]="model.fileRootCss" #contentElement>
-  <input
-    [class]="model.cssClasses.fileInput"
-    *ngIf="!model.isReadOnly"
-    tabindex="-1"
-    type="file"
-    [attr.id]="model.inputId"
-    (change)="model.doChange($event)"
-    [attr.aria-required]="model.ariaRequired"
-    [attr.aria-label]="model.ariaLabel"
-    [attr.aria-invalid]="model.ariaInvalid"
-    [attr.aria-describedby]="model.ariaDescribedBy"
-    [attr.multiple]="model.multipleRendered"
-    [attr.title]="model.inputTitle"
-    [attr.accept]="model.acceptedTypes"
-    [attr.capture]="model.renderCapture"
-  />
-  <input
-    *ngIf="model.isReadOnly"
-    type="file"
-    disabled
-    [class]="model.getReadOnlyFileCss()"
-    [attr.id]="model.inputId"
-    [attr.multiple]="model.multipleRendered"
-    [attr.placeholder]="model.title"
-    style="color: transparent"
-  />
-  <div [class]="model.cssClasses.dragArea"
-    (dragenter)="model.onDragEnter($event)"
-    (drop)="model.onDrop($event)"
-    (dragover)="model.onDragOver($event)"
-    (dragleave)="model.onDragLeave($event)">  
-    <div
-      [class]="model.getFileDecoratorCss()"
-    >
-      <span [class]="model.cssClasses.dragAreaPlaceholder">{{ model.renderedPlaceholder }}</span>
-      <div [class]="model.cssClasses.wrapper">
-        <label
-          *ngIf="!model.isReadOnly"
-          role="button"
-          tabindex="0"
-          [class]="model.getChooseFileCss()"
-          [attr.for]="model.inputId"
-          [attr.aria-label]="model.chooseButtonText"
-          [key2click]
-          >
-          <span>{{ model.chooseButtonText }}</span>
-          <svg *ngIf="model.cssClasses.chooseFileIconId" [title]="model.chooseButtonText" [iconName]="model.cssClasses.chooseFileIconId" [size]="'auto'" sv-ng-svg-icon></svg>
-        </label>
-        <span
-          [class]="model.cssClasses.noFileChosen"
-          *ngIf="model.isEmpty()"
-          >{{ model.noFileChosenCaption }}</span
-        >
-      </div>
+  <input [class]="model.cssClasses.fileInput" *ngIf="!model.isReadOnly" tabindex="-1" type="file"
+    [attr.id]="model.inputId" (change)="model.doChange($event)" [attr.aria-required]="model.ariaRequired"
+    [attr.aria-label]="model.ariaLabel" [attr.aria-invalid]="model.ariaInvalid"
+    [attr.aria-describedby]="model.ariaDescribedBy" [attr.multiple]="model.multipleRendered"
+    [attr.title]="model.inputTitle" [attr.accept]="model.acceptedTypes" [attr.capture]="model.renderCapture" />
+  <input *ngIf="model.isReadOnly" type="file" disabled [class]="model.getReadOnlyFileCss()" [attr.id]="model.inputId"
+    [attr.multiple]="model.multipleRendered" [attr.placeholder]="model.title" style="color: transparent" />
+  <div [class]="model.cssClasses.dragArea" (dragenter)="model.onDragEnter($event)" (drop)="model.onDrop($event)"
+    (dragover)="model.onDragOver($event)" (dragleave)="model.onDragLeave($event)">
+    <div [class]="model.getFileDecoratorCss()">
+      <ng-container *ngIf="model.showLoadingIndicator">
+        <sv-ng-loading-indicator></sv-ng-loading-indicator>
+      </ng-container>
+      <ng-container *ngIf="model.showChooseButton">
+        <span [class]="model.cssClasses.dragAreaPlaceholder">{{ model.renderedPlaceholder }}</span>
+        <div [class]="model.cssClasses.wrapper">
+          <label *ngIf="!model.isReadOnly" role="button" tabindex="0" [class]="model.getChooseFileCss()"
+            [attr.for]="model.inputId" [attr.aria-label]="model.chooseButtonText" [key2click]>
+            <span>{{ model.chooseButtonText }}</span>
+            <svg *ngIf="model.cssClasses.chooseFileIconId" [title]="model.chooseButtonText"
+              [iconName]="model.cssClasses.chooseFileIconId" [size]="'auto'" sv-ng-svg-icon></svg>
+          </label>
+          <span [class]="model.cssClasses.noFileChosen" *ngIf="model.isEmpty()">{{ model.noFileChosenCaption }}</span>
+        </div>
+      </ng-container>
     </div>
-    <button
-      type="button"
-      *ngIf="model.showRemoveButton"
-      [class]="model.cssClasses.removeButton"
-      (click)="model.doClean($event)"
-    >
+    <button type="button" *ngIf="model.showRemoveButton" [class]="model.cssClasses.removeButton"
+      (click)="model.doClean($event)">
       <span>{{ model.clearButtonCaption }}</span>
-      <svg *ngIf="model.cssClasses.removeButtonIconId" [iconName]="model.cssClasses.removeButtonIconId" [size]="'auto'" [title]="model.clearButtonCaption" sv-ng-svg-icon></svg>
+      <svg *ngIf="model.cssClasses.removeButtonIconId" [iconName]="model.cssClasses.removeButtonIconId" [size]="'auto'"
+        [title]="model.clearButtonCaption" sv-ng-svg-icon></svg>
     </button>
-    <div [class]="model.cssClasses.fileList || undefined" *ngIf="!model.isEmpty()">
-      <span
-        *ngFor="let val of model.previewValue; index as index; trackBy: trackFilesFn"
-        [visible]="val && model.isPreviewVisible(index)"
-        [class]="model.cssClasses.preview"
-      >
+    <div [class]="model.cssClasses.fileList || undefined" *ngIf="model.allowShowPreview">
+      <span *ngFor="let val of model.previewValue; index as index; trackBy: trackFilesFn"
+        [visible]="val && model.isPreviewVisible(index)" [class]="model.cssClasses.preview">
         <div *ngIf="val.name && model.cssClasses.fileSign" [class]="model.cssClasses.fileSign">
-          <a
-            (click)="model.doDownloadFile($event, val)"
-            [attr.href]="val.content | safeUrl"
-            [attr.title]="val.name"
-            [attr.download]="val.name"
-            [style.width]="model.imageWidth"
-            >{{ val.name }}</a
-          >
+          <a (click)="model.doDownloadFile($event, val)" [attr.href]="val.content | safeUrl" [attr.title]="val.name"
+            [attr.download]="val.name" [style.width]="model.imageWidth">{{ val.name }}</a>
         </div>
         <div [class]="model.cssClasses.imageWrapper">
-          <img
-            *ngIf="model.canPreviewImage(val)"
-            [attr.src]="val.content | safeUrl"
-            [style.height]="model.imageHeight"
-            [style.width]="model.imageWidth"
-            alt="File preview"
-          />
-          <svg *ngIf="model.defaultImage(val)" 
-            [iconName]="model.cssClasses.defaultImageIconId" [partCss]="model.cssClasses.defaultImage" [size]="'auto'" sv-ng-svg-icon></svg>
-          <div *ngIf="val.name && !model.isReadOnly" [class]="model.cssClasses.removeFileButton" (click)="model.doRemoveFile(val)">
-            <span
-              [class]="model.cssClasses.removeFile"
-              >{{ model.removeFileCaption }}</span
-            >
-            <svg *ngIf="model.cssClasses.removeFileSvgIconId" [title]="model.removeFileCaption" [partCss]="model.cssClasses.removeFileSvg" [iconName]="model.cssClasses.removeFileSvgIconId" [size]="'auto'" sv-ng-svg-icon ></svg>
+          <img *ngIf="model.canPreviewImage(val)" [attr.src]="val.content | safeUrl" [style.height]="model.imageHeight"
+            [style.width]="model.imageWidth" alt="File preview" />
+          <svg *ngIf="model.defaultImage(val)" [iconName]="model.cssClasses.defaultImageIconId"
+            [partCss]="model.cssClasses.defaultImage" [size]="'auto'" sv-ng-svg-icon></svg>
+          <div *ngIf="val.name && !model.isReadOnly" [class]="model.cssClasses.removeFileButton"
+            (click)="model.doRemoveFile(val)">
+            <span [class]="model.cssClasses.removeFile">{{ model.removeFileCaption }}</span>
+            <svg *ngIf="model.cssClasses.removeFileSvgIconId" [title]="model.removeFileCaption"
+              [partCss]="model.cssClasses.removeFileSvg" [iconName]="model.cssClasses.removeFileSvgIconId"
+              [size]="'auto'" sv-ng-svg-icon></svg>
           </div>
         </div>
         <div *ngIf="val.name && model.cssClasses.fileSignBottom" [class]="model.cssClasses.fileSignBottom">
-          <a
-            (click)="model.doDownloadFile($event, val)"
-            [attr.href]="val.content | safeUrl"
-            [attr.title]="val.name"
-            [attr.download]="val.name"
-            [style.width]="model.imageWidth"
-            >{{ val.name }}</a
-          >
+          <a (click)="model.doDownloadFile($event, val)" [attr.href]="val.content | safeUrl" [attr.title]="val.name"
+            [attr.download]="val.name" [style.width]="model.imageWidth">{{ val.name }}</a>
         </div>
       </span>
     </div>
-    <button
-      type="button"
-      *ngIf="model.showRemoveButtonBottom"
-      [class]="model.showRemoveButtonBottom"
-      (click)="model.doClean($event)"
-    >
+    <button type="button" *ngIf="model.showRemoveButtonBottom" [class]="model.showRemoveButtonBottom"
+      (click)="model.doClean($event)">
       <span>{{ model.clearButtonCaption }}</span>
-      <svg *ngIf="model.cssClasses.removeButtonIconId" [iconName]="model.cssClasses.removeButtonIconId" [size]="'auto'" [title]="model.clearButtonCaption" sv-ng-svg-icon></svg>
+      <svg *ngIf="model.cssClasses.removeButtonIconId" [iconName]="model.cssClasses.removeButtonIconId" [size]="'auto'"
+        [title]="model.clearButtonCaption" sv-ng-svg-icon></svg>
     </button>
     <sv-action-bar *ngIf="model.mobileFileNavigatorVisible" [model]="model.mobileFileNavigator"></sv-action-bar>
   </div>
