--- a/packages/survey-angular-ui/src/components/progress/default/progress.component.html
+++ b/packages/survey-angular-ui/src/components/progress/default/progress.component.html
@@ -1,5 +1,5 @@
 <ng-template #template>
-  <div [class]="model.getProgressCssClasses()">
+  <div [class]="model.getProgressCssClasses(container)">
     <div [class]="model.css.progressBar" [style.width]="model.progressValue + '%'"
         role="progressbar" aria-valuemin="0" aria-valuemax="100">
         <span [class]="getProgressTextInBarCss(model.css)">
