rewrite multiple row styles

--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -35,6 +35,8 @@
   &>div {
     box-sizing: border-box;
     padding-left: calcSize(2);
+    display: flex;
+    align-items: stretch;
   }
 }
 
@@ -62,13 +64,7 @@
     margin-left: calc(-1 * var(--sd-base-padding));
     width: calc(100% + var(--sd-base-padding));
   }
-  .sd-row__panel {
-    height: 100%
-  }
   
-  .sd-row__question {
-    height: 100%
-  }
 }
 
 .sd-row__panel {
