--- a/src/defaultV2-theme/blocks/sd-progress.scss
+++ b/src/defaultV2-theme/blocks/sd-progress.scss
@@ -28,3 +28,14 @@
     margin-left: 10px;
   }
 }
+
+.sd-body__progress--top {
+  margin-bottom: calcSize(4);
+  position: sticky;
+  top: 0;
+  z-index: 50;
+}
+
+.sd-body__progress--bottom .sd-progress__text {
+  margin-top: calcSize(-3.5);
+}
