--- a/src/knockout/templates/question-file.html
+++ b/src/knockout/templates/question-file.html
@@ -8,11 +8,11 @@
       <!-- /ko -->
       <div data-bind="css: question.cssClasses.dragArea, event: { dragenter: question.ondragenter, dragover: question.ondragover, drop: question.ondrop, dragleave: question.ondragleave }">     
         <div data-bind="css: question.getFileDecoratorCss()">
-          <!-- ko if: question.isUploading -->
+          <!-- ko if: question.showLoadingIndicator -->
           <!-- ko component: { name: "sv-loading-indicator" } -->
           <!-- /ko -->
           <!-- /ko -->
-          <!-- ko ifnot: question.isUploading -->
+          <!-- ko if: question.showChooseButton -->
           <span data-bind="css: question.cssClasses.dragAreaPlaceholder, text: question.renderedPlaceholder"></span>
           <div data-bind="css: question.cssClasses.wrapper">
             <!-- ko ifnot: isReadOnly -->
@@ -31,7 +31,7 @@
         </div>
         <!-- ko template: { name: 'survey-question-file-clean-button', data: {question: question, showRemoveButton: question.showRemoveButton} } --><!-- /ko -->
         <!-- ko if: question.showPreview -->
-        <!-- ko if: question.koHasValue -->
+        <!-- ko if: question.koHasValue && question.allowShowPreview -->
         <div data-bind="css: question.cssClasses.fileList, foreach: question.koData, visible: question.koHasValue">
             <span data-bind="visible: question.isPreviewVisible($index()), css: question.cssClasses.preview">
               <!-- ko template: { name: 'survey-question-file-sign', data: {question: question, item: $data, fileSignCss: question.cssClasses.fileSign} } --><!-- /ko -->
