resolve #6873 Iphone: Incorrect question transparent

--- a/src/defaultV2-theme/blocks/sd-input.scss
+++ b/src/defaultV2-theme/blocks/sd-input.scss
@@ -22,6 +22,14 @@
   outline: none;
 }
 
+//for IPHONE
+input,
+textarea {
+  &.sd-input:disabled:not(.sd-input--disabled) {
+    opacity: 1;
+  }
+}
+
 .sd-input--disabled {
   background-color: $editor-background;
   -webkit-user-select: none;
@@ -38,8 +46,8 @@
   user-select: none;
 }
 
-.sd-input--disabled,
-.sd-input--disabled::placeholder {
+.sd-input.sd-input--disabled,
+.sd-input.sd-input--disabled::placeholder {
   color: $foreground;
   opacity: 0.25;
 }
