#6879 Mobile: Do not use alt-row style in matrix question Fixes #6879

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -80,49 +80,51 @@
   }
 }
 
-.sd-table--alternate-rows {
-  margin-left: calcSize(1);
-  margin-right: calcSize(1);
-  width: calc(100% - 2 * #{$base-unit});
-
-  .sd-table__cell:not(.sd-table__cell--header):first-of-type {
-    padding-left: calcSize(2);
-  }
-
-  .sd-table__cell:last-of-type {
-    padding-right: calcSize(2);
-  }
-
-  .sd-table__row:nth-of-type(odd) {
-
-    &>td,
-    td:first-of-type {
-      background-color: $background-dim-light;
-
-      &.sd-matrix__text--checked {
-        background-color: $primary-light;
-      }
-
-      .sd-input {
-        background-color: $primary-foreground;
-      }
-
-      .sd-item:not(.sd-item--error) {
-        .sd-item__decorator {
-          background-color: var(--sjs-general-backcolor, var(--background, #fff));
+.sd-root-modern:not(.sd-root-modern--mobile) {
+  .sd-table--alternate-rows {
+    margin-left: calcSize(1);
+    margin-right: calcSize(1);
+    width: calc(100% - 2 * #{$base-unit});
+  
+    .sd-table__cell:not(.sd-table__cell--header):first-of-type {
+      padding-left: calcSize(2);
+    }
+  
+    .sd-table__cell:last-of-type {
+      padding-right: calcSize(2);
+    }
+  
+    .sd-table__row:nth-of-type(odd) {
+  
+      &>td,
+      td:first-of-type {
+        background-color: $background-dim-light;
+  
+        &.sd-matrix__text--checked {
+          background-color: $primary-light;
         }
-
-        &.sd-item--checked .sd-item__decorator {
-          background-color: $primary;
-        }
-
-        &.sd-radio--checked .sd-radio__control:focus+.sd-radio__decorator:after {
+  
+        .sd-input {
           background-color: $primary-foreground;
+        }
+  
+        .sd-item:not(.sd-item--error) {
+          .sd-item__decorator {
+            background-color: var(--sjs-general-backcolor, var(--background, #fff));
+          }
+  
+          &.sd-item--checked .sd-item__decorator {
+            background-color: $primary;
+          }
+  
+          &.sd-radio--checked .sd-radio__control:focus+.sd-radio__decorator:after {
+            background-color: $primary-foreground;
+          }
         }
       }
     }
   }
-}
+} 
 
 .sd-table__cell {
   font-weight: normal;
