--- a/src/defaultV2-theme/defaultV2.m600.scss
+++ b/src/defaultV2-theme/defaultV2.m600.scss
@@ -28,60 +28,60 @@
       min-width: 100%;
     }
 
-    //multipletext responsiveness
-    .sd-multipletext__cell {
-      display: block;
-
-      &:not(:first-of-type) {
-        padding-left: 0;
-        padding-top: calcSize(1);
-      }
-
-      :not(:last-of-type) {
-        padding-bottom: calcSize(1);
-      }
-    }
-
-    .sd-multipletext__item-container {
-      flex-direction: column;
-    }
-
-    .sd-multipletext__item-title {
-      height: calcSize(2);
-      padding-right: 0;
-      border-right: none;
-      margin-bottom: 0;
-      margin-top: calcSize(1);
-      width: 100%;
-      max-width: none;
-
-      span {
-        font-size: calcFontSize(0.75);
-        line-height: calcLineHeight(1);
-      }
-    }
-
-    .sd-multipletext__item {
-      width: 100%;
-    }
-
-    .sd-multipletext__item .sd-input {
-      padding-right: 0;
-      padding-left: 0;
-      margin-top: 0;
-      margin-bottom: calcSize(1);
-    }
-
-    //eo multipletext responsiveness
-    .sd-selectbase--multi-column {
-      flex-direction: column;
-
-      .sd-selectbase__column:not(:last-child) {
-        padding-right: 0;
-      }
-    }
-
     @include table_responsive();
     @include ranking_responsive();
+  }
+}
+
+.sd-multipletext--mobile {
+  .sd-multipletext__cell {
+    display: block;
+
+    &:not(:first-of-type) {
+      padding-left: 0;
+      padding-top: calcSize(1);
+    }
+
+    :not(:last-of-type) {
+      padding-bottom: calcSize(1);
+    }
+  }
+
+  .sd-multipletext__item-container {
+    flex-direction: column;
+  }
+
+  .sd-multipletext__item-title {
+    height: calcSize(2);
+    padding-right: 0;
+    border-right: none;
+    margin-bottom: 0;
+    margin-top: calcSize(1);
+    width: 100%;
+    max-width: none;
+
+    span {
+      font-size: calcFontSize(0.75);
+      line-height: calcLineHeight(1);
+    }
+  }
+
+  .sd-multipletext__item {
+    width: 100%;
+  }
+
+  .sd-multipletext__item .sd-input {
+    padding-right: 0;
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: calcSize(1);
+  }
+}
+
+.sd-selectbase--mobile .sd-selectbase--multi-column {
+  flex-direction: column;
+
+  .sd-selectbase__column:not(:last-child) {
+    padding-right: 0;
   }
 }
