--- a/src/defaultV2-theme/defaultV2.m600.scss
+++ b/src/defaultV2-theme/defaultV2.m600.scss
@@ -48,33 +48,44 @@
   }
 
   .sd-multipletext__item-container {
-    flex-direction: column;
+    padding-top: calcSize(1);
+    padding-bottom: calcSize(1);
   }
 
   .sd-multipletext__item-title {
-    height: calcSize(2);
-    padding-right: 0;
-    border-right: none;
-    margin-bottom: 0;
-    margin-top: calcSize(1);
-    width: 100%;
     max-width: none;
-
-    span {
-      font-size: calcFontSize(0.75);
-      line-height: calcLineHeight(1);
-    }
+    border-right: none;
+    width: 100%;
+    padding: calcSize(1) 0;
+    margin: 0;
   }
 
   .sd-multipletext__item {
-    width: 100%;
+    flex-basis: 0;
+
+    .sd-input {
+      padding: 0;
+      margin: 0;
+    }
   }
 
-  .sd-multipletext__item .sd-input {
-    padding-right: 0;
-    padding-left: 0;
-    margin-top: 0;
-    margin-bottom: calcSize(1);
+  .sd-multipletext__item-container--answered,
+  .sd-multipletext__item-container--allow-focus:focus-within {
+    flex-direction: column;
+
+    .sd-multipletext__item-title {
+      padding: 0;
+
+      span {
+        font-size: calcFontSize(0.75);
+        line-height: calcLineHeight(1);
+      }
+    }
+
+    .sd-multipletext__item {
+      flex-basis: auto;
+      width: 100%;
+    }
   }
 }
 
