--- a/src/knockout/templates/question-custom.html
+++ b/src/knockout/templates/question-custom.html
@@ -1,4 +1,10 @@
 <script type="text/html" id="survey-question-custom">
-  <!-- ko template: { name: question.contentQuestion.koTemplateName(), data: question.contentQuestion, as: 'question', afterRender: question.contentQuestion.koQuestionAfterRender } -->
-  <!-- /ko -->
+    <!-- ko if: question.contentQuestion.isDefaultRendering() -->
+      <!-- ko template: { name: question.contentQuestion.koTemplateName(), data: question.contentQuestion, as: 'question', afterRender: question.contentQuestion.koQuestionAfterRender } -->
+      <!-- /ko -->
+    <!-- /ko -->
+    <!-- ko ifnot: question.contentQuestion.isDefaultRendering() -->
+      <!-- ko component: { name: question.contentQuestion.getComponentName(), params: { question: question.contentQuestion } } -->
+      <!-- /ko -->
+    <!-- /ko -->
 </script>
