--- a/packages/survey-angular-ui/src/questions/selectbase.component.html
+++ b/packages/survey-angular-ui/src/questions/selectbase.component.html
@@ -1,4 +1,10 @@
-<fieldset [class]="model.getSelectBaseRootCss()" role="presentation" #contentElement>
+<fieldset [class]="model.getSelectBaseRootCss()" #contentElement 
+  [attr.aria-required]="model.a11y_input_ariaRequired"
+  [attr.aria-label]="model.a11y_input_ariaLabel"
+  [attr.aria-labelledby]="model.a11y_input_ariaLabelledBy"
+  [attr.aria-invalid]="model.a11y_input_ariaInvalid"
+  [attr.aria-describedby]="model.a11y_input_ariaDescribedBy"
+>
   <legend *ngIf="showLegend" role="presentation" class="sv-hidden"></legend>
   <ng-container *ngIf="model.hasHeadItems">
     <ng-container *ngFor="let item of model.headItems; trackBy: trackItemBy">
