--- a/src/knockout/templates/question-file.html
+++ b/src/knockout/templates/question-file.html
@@ -1,63 +1,73 @@
 ﻿<script type="text/html" id="survey-question-file">
   <div data-bind="css: question.fileRootCss">
-      <!-- ko ifnot: question.isInputReadOnly -->
-      <input type="file" tabindex="-1" data-bind="css: question.cssClasses.fileInput, attr: { id: question.inputId, 'aria-required': question.ariaRequired, 'aria-label': question.ariaLabel, 'aria-invalid': question.ariaInvalid, 'aria-describedby': question.ariaDescribedBy, multiple: question.allowMultiple ? 'multiple' : undefined, title: koInputTitle, accept: question.acceptedTypes, capture: question.renderCapture }, event: { change: question.dochange }">
+      <!-- ko if: question.isPlayingVideo -->
+        <video autoplay playsinline width="640" height="480" data-bind="attr: { id: question.videoId }"></video>
       <!-- /ko -->
-      <!-- ko if: question.isReadOnly -->
-      <input type="file" disabled data-bind="css: question.getReadOnlyFileCss(), attr: { id: question.inputId, placeholder: question.title, multiple: question.allowMultiple ? 'multiple' : undefined }" style="color: transparent;"/>
-      <!-- /ko -->
-      <div data-bind="css: question.cssClasses.dragArea, event: { dragenter: question.ondragenter, dragover: question.ondragover, drop: question.ondrop, dragleave: question.ondragleave }">     
-        <div data-bind="css: question.getFileDecoratorCss()">
-          <span data-bind="css: question.cssClasses.dragAreaPlaceholder, text: question.renderedPlaceholder"></span>
-          <div data-bind="css: question.cssClasses.wrapper">
-            <!-- ko ifnot: isReadOnly -->
-            <label tabindex="0" role="button" data-bind="css: question.koChooseFileCss, key2click, attr: { for: question.inputId, 'aria-label': question.koGetChooseButtonText() }">
-              <span data-bind="text: question.koGetChooseButtonText()"></span>
-              <!-- ko if: question.cssClasses.chooseFileIconId -->
-                  <!-- ko component: { name: 'sv-svg-icon', params: { title: question.koGetChooseButtonText(), iconName: question.cssClasses.chooseFileIconId, size: 'auto' } } --><!-- /ko -->
+      <!-- ko ifnot: question.isPlayingVideo -->
+        <!-- ko ifnot: question.isInputReadOnly -->
+          <!-- ko if: question.hasVideoUI -->
+          <button data-bind="click: () => { question.startVideo(); }">Start Video</button>
+          <!-- /ko -->
+          <!-- ko if: question.hasFileUI -->
+          <input type="file" tabindex="-1" data-bind="css: question.cssClasses.fileInput, attr: { id: question.inputId, 'aria-required': question.ariaRequired, 'aria-label': question.ariaLabel, 'aria-invalid': question.ariaInvalid, 'aria-describedby': question.ariaDescribedBy, multiple: question.allowMultiple ? 'multiple' : undefined, title: koInputTitle, accept: question.acceptedTypes, capture: question.renderCapture }, event: { change: question.dochange }">
+          <!-- /ko -->
+        <!-- /ko -->
+        <!-- ko if: question.isReadOnly -->
+        <input type="file" disabled data-bind="css: question.getReadOnlyFileCss(), attr: { id: question.inputId, placeholder: question.title, multiple: question.allowMultiple ? 'multiple' : undefined }" style="color: transparent;"/>
+        <!-- /ko -->
+        <div data-bind="css: question.cssClasses.dragArea, event: { dragenter: question.ondragenter, dragover: question.ondragover, drop: question.ondrop, dragleave: question.ondragleave }">     
+          <div data-bind="css: question.getFileDecoratorCss()">
+            <span data-bind="css: question.cssClasses.dragAreaPlaceholder, text: question.renderedPlaceholder"></span>
+            <div data-bind="css: question.cssClasses.wrapper">
+              <!-- ko ifnot: isReadOnly -->
+              <label tabindex="0" role="button" data-bind="css: question.koChooseFileCss, key2click, attr: { for: question.inputId, 'aria-label': question.koGetChooseButtonText() }">
+                <span data-bind="text: question.koGetChooseButtonText()"></span>
+                <!-- ko if: question.cssClasses.chooseFileIconId -->
+                    <!-- ko component: { name: 'sv-svg-icon', params: { title: question.koGetChooseButtonText(), iconName: question.cssClasses.chooseFileIconId, size: 'auto' } } --><!-- /ko -->
+                <!-- /ko -->
+              </label>
               <!-- /ko -->
-            </label>
-            <!-- /ko -->
-            <!-- ko if: !question.koHasValue() -->
-            <span data-bind="css: question.cssClasses.noFileChosen, text: question.noFileChosenCaption"></span>
-            <!-- /ko -->
+              <!-- ko if: !question.koHasValue() -->
+              <span data-bind="css: question.cssClasses.noFileChosen, text: question.noFileChosenCaption"></span>
+              <!-- /ko -->
+            </div>
           </div>
-        </div>
-        <!-- ko template: { name: 'survey-question-file-clean-button', data: {question: question, showRemoveButton: question.showRemoveButton} } --><!-- /ko -->
-        <!-- ko if: question.showPreview -->
-        <!-- ko if: question.koHasValue -->
-        <div data-bind="css: question.cssClasses.fileList, foreach: question.koData, visible: question.koHasValue">
-            <span data-bind="visible: question.isPreviewVisible($index()), css: question.cssClasses.preview">
-              <!-- ko template: { name: 'survey-question-file-sign', data: {question: question, item: $data, fileSignCss: question.cssClasses.fileSign} } --><!-- /ko -->
-              <div data-bind="css: question.cssClasses.imageWrapper">
-                <!-- ko if: question.canPreviewImage($data) -->
-                <img data-bind="attr: { src: $data.content }, style : { height: question.imageHeight, width: question.imageWidth }" alt="File preview">
-                <!-- /ko -->
-                <!-- ko if: question.defaultImage($data) -->
-                <!-- ko component: { name: 'sv-svg-icon', params: { css: question.cssClasses.defaultImage, iconName: question.cssClasses.defaultImageIconId, size: 'auto' } } --><!-- /ko -->
-                <!-- /ko -->
-                <!-- ko if: $data.name -->
-                <!-- ko ifnot: question.isReadOnly -->
-                <div data-bind="click: question.doremovefile, css: question.cssClasses.removeFileButton">
-                    <span data-bind="css: question.cssClasses.removeFile, text: question.removeFileCaption"></span>
-                    <!-- ko if: question.cssClasses.removeFileSvgIconId -->
-                      <!-- ko component: { name: 'sv-svg-icon', params: { css: question.cssClasses.removeFileSvg, title: question.removeFileCaption, iconName: question.cssClasses.removeFileSvgIconId, size: 'auto' } } --><!-- /ko -->
-                    <!-- /ko -->
+          <!-- ko template: { name: 'survey-question-file-clean-button', data: {question: question, showRemoveButton: question.showRemoveButton} } --><!-- /ko -->
+          <!-- ko if: question.showPreview -->
+          <!-- ko if: question.koHasValue -->
+          <div data-bind="css: question.cssClasses.fileList, foreach: question.koData, visible: question.koHasValue">
+              <span data-bind="visible: question.isPreviewVisible($index()), css: question.cssClasses.preview">
+                <!-- ko template: { name: 'survey-question-file-sign', data: {question: question, item: $data, fileSignCss: question.cssClasses.fileSign} } --><!-- /ko -->
+                <div data-bind="css: question.cssClasses.imageWrapper">
+                  <!-- ko if: question.canPreviewImage($data) -->
+                  <img data-bind="attr: { src: $data.content }, style : { height: question.imageHeight, width: question.imageWidth }" alt="File preview">
+                  <!-- /ko -->
+                  <!-- ko if: question.defaultImage($data) -->
+                  <!-- ko component: { name: 'sv-svg-icon', params: { css: question.cssClasses.defaultImage, iconName: question.cssClasses.defaultImageIconId, size: 'auto' } } --><!-- /ko -->
+                  <!-- /ko -->
+                  <!-- ko if: $data.name -->
+                  <!-- ko ifnot: question.isReadOnly -->
+                  <div data-bind="click: question.doremovefile, css: question.cssClasses.removeFileButton">
+                      <span data-bind="css: question.cssClasses.removeFile, text: question.removeFileCaption"></span>
+                      <!-- ko if: question.cssClasses.removeFileSvgIconId -->
+                        <!-- ko component: { name: 'sv-svg-icon', params: { css: question.cssClasses.removeFileSvg, title: question.removeFileCaption, iconName: question.cssClasses.removeFileSvgIconId, size: 'auto' } } --><!-- /ko -->
+                      <!-- /ko -->
+                  </div>
+                  <!-- /ko -->
+                  <!-- /ko -->
                 </div>
-                <!-- /ko -->
-                <!-- /ko -->
-              </div>
-              <!-- ko template: { name: 'survey-question-file-sign', data: {question: question, item: $data, fileSignCss: question.cssClasses.fileSignBottom} } --><!-- /ko -->
-            </span>
+                <!-- ko template: { name: 'survey-question-file-sign', data: {question: question, item: $data, fileSignCss: question.cssClasses.fileSignBottom} } --><!-- /ko -->
+              </span>
+          </div>
+          <!-- /ko -->
+          <!-- /ko -->
+          <!-- ko template: { name: 'survey-question-file-clean-button', data: {question: question, showRemoveButton: question.showRemoveButtonBottom} } --><!-- /ko -->
+          <!-- ko if: question.mobileFileNavigatorVisible -->
+          <!-- ko component: { name: 'sv-action-bar', params: { model: question.mobileFileNavigator } } -->
+          <!-- /ko -->
+          <!-- /ko -->
         </div>
-        <!-- /ko -->
-        <!-- /ko -->
-        <!-- ko template: { name: 'survey-question-file-clean-button', data: {question: question, showRemoveButton: question.showRemoveButtonBottom} } --><!-- /ko -->
-        <!-- ko if: question.mobileFileNavigatorVisible -->
-        <!-- ko component: { name: 'sv-action-bar', params: { model: question.mobileFileNavigator } } -->
-        <!-- /ko -->
-        <!-- /ko -->
-      </div>
+      <!-- /ko -->
   </div>
 </script>
 <script type="text/html" id="survey-question-file-clean-button">
