work for the https://github.com/surveyjs/survey-library/issues/6859 (fix ff tests)

--- a/packages/survey-angular-ui/src/questions/selectbase.component.html
+++ b/packages/survey-angular-ui/src/questions/selectbase.component.html
@@ -1,4 +1,5 @@
 <fieldset [class]="model.getSelectBaseRootCss()" #contentElement 
+  [attr.role]="model.a11y_input_ariaRole"
   [attr.aria-required]="model.a11y_input_ariaRequired"
   [attr.aria-label]="model.a11y_input_ariaLabel"
   [attr.aria-labelledby]="model.a11y_input_ariaLabelledBy"
