--- a/src/knockout/templates/question-checkbox.html
+++ b/src/knockout/templates/question-checkbox.html
@@ -1,5 +1,5 @@
 <script type="text/html" id="survey-question-checkbox">
-  <fieldset data-bind="css: question.getSelectBaseRootCss(), attr: { 'aria-required': question.a11y_input_ariaRequired, 'aria-labelledby': question.a11y_input_ariaLabelledBy, 'aria-invalid': question.a11y_input_ariaInvalid, 'aria-describedby': question.a11y_input_ariaDescribedBy, 'aria-label': question.a11y_input_ariaLabel }">
+  <fieldset data-bind="css: question.getSelectBaseRootCss(), attr: { 'role': question.a11y_input_ariaRole, 'aria-required': question.a11y_input_ariaRequired, 'aria-labelledby': question.a11y_input_ariaLabelledBy, 'aria-invalid': question.a11y_input_ariaInvalid, 'aria-describedby': question.a11y_input_ariaDescribedBy, 'aria-label': question.a11y_input_ariaLabel }">
       <legend role="presentation" class="sv-hidden"></legend>
       <!-- ko if: question.hasHeadItems  -->
         <!-- ko foreach: { data: question.headItems, as: 'item', afterRender: question.koAfterRender }  -->
