Progress bar with titles. Page name –> title fix #6925

--- a/src/knockout/components/progress/buttons.html
+++ b/src/knockout/components/progress/buttons.html
@@ -4,7 +4,7 @@
         <div data-bind="css: survey.css.progressButtonsListContainer">
             <ul data-bind="foreach: survey.visiblePages, css: survey.css.progressButtonsList">
                 <li data-bind="css: $parent.getListElementCss($index), click: $parent.isListElementClickable($index) ? $parent.clickListElement.bind($parent, $index) : null">
-                    <div data-bind="css: css.progressButtonsPageTitle, text: locNavigationTitle.koRenderedHtml() || name, attr: { title: locNavigationTitle.koRenderedHtml() || name }"></div>
+                    <div data-bind="css: css.progressButtonsPageTitle, text: renderedNavigationTitle, attr: { title: renderedNavigationTitle }"></div>
                     <div data-bind="css: css.progressButtonsPageDescription, text: locNavigationDescription.koRenderedHtml(), attr: { title: locNavigationDescription.koRenderedHtml() }"></div>
                 </li>
             </ul>
