--- a/packages/survey-angular-ui/src/components/progress/buttons/progress.component.html
+++ b/packages/survey-angular-ui/src/components/progress/buttons/progress.component.html
@@ -14,9 +14,9 @@
           (click)="isListElementClickable(index) ? clickListElement(index) : null">
           <div
             [class]="model.css.progressButtonsPageTitle"
-            [title]="page.locNavigationTitle.renderedHtml || page.name"
+            [title]="page.renderedNavigationTitle"
           >
-            {{ page.locNavigationTitle.renderedHtml || page.name }}
+            {{ page.renderedNavigationTitle }}
           </div>
           <div
             [class]="model.css.progressButtonsPageDescription"
