work for "Title cover" : step 5 save cover into theme

--- a/src/defaultV2-theme/blocks/cover.scss
+++ b/src/defaultV2-theme/blocks/cover.scss
@@ -22,6 +22,11 @@
   left: 0;
   right: 0;
   border: 0;
+  background-position-x: center;
+}
+
+.sv-cover__background-image--contain {
+  background-repeat: no-repeat;
 }
 
 .sv-cover__text {
