Work for #6794: fix templates in all frameworks

--- a/packages/survey-angular-ui/src/questions/file.component.html
+++ b/packages/survey-angular-ui/src/questions/file.component.html
@@ -63,6 +63,6 @@
       <svg *ngIf="model.cssClasses.removeButtonIconId" [iconName]="model.cssClasses.removeButtonIconId" [size]="'auto'"
         [title]="model.clearButtonCaption" sv-ng-svg-icon></svg>
     </button>
-    <sv-action-bar *ngIf="model.mobileFileNavigatorVisible" [model]="model.mobileFileNavigator"></sv-action-bar>
+    <sv-action-bar *ngIf="model.fileNavigatorVisible" [model]="model.fileNavigator"></sv-action-bar>
   </div>
 </div>
