--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -143,6 +143,11 @@
   }
 }
 
+.sd-input--disabled .sv-string-viewer {
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .sv-popup.sv-popup--dropdown.sv-popup--dropdown {
   .sd-list__item-body {
     line-height: multiply(1.5, $font-editorfont-size);
