Work for #6933: fix separator showing when there is no action bar

--- a/src/defaultV2-theme/blocks/sd-paneldynamic.scss
+++ b/src/defaultV2-theme/blocks/sd-paneldynamic.scss
@@ -40,6 +40,10 @@
     border: none;
 }
 
+.sd-paneldynamic__separator:only-child {
+    display: none;
+}
+
 .sd-paneldynamic__panel-wrapper {
     padding-bottom: calc(1 * var(--sd-base-padding));
 }
